# input-bridge

./: Cargo.toml
src/: lib.rs  main.rs
src/client/: ws_client.rs
src/config/: mod.rs  sockets.rs
src/error/: capture.rs  mod.rs  ws.rs
src/server/: capture.rs  mod.rs  monitors.rs  ws.rs
