[package]
name = "input-bridget"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = "0.5.3"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr"] }